src/objects/VAT_Data__mdt.object
<CustomObject>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Names__c</fullName>
        <label>Country Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_Rate__c</fullName>
        <label>VAT Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>VAT Datas</label>
    <pluralLabel>VAT Datas</pluralLabel>
</CustomObject>